--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=SpringEcommerce
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+# H2 Database Configuration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
